--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,18 +46,15 @@
             </button> -->
          </div>
          <ul class='check_list'>
-            <li>
-               개인 쓰레기통 스스로 비우기
-               <span>
-                  (금요일 필수!)
-               </span>
-            </li>
-            <li>
-               정수기,커피머신,싱크대 주변에 튄 물 닦기
-            </li>
-            <li>
-               마지막 퇴근 직원은 모든 문,에어컨,전등,노래 등 단속하기
-            </li>
+            <% everyWorks.forEach( work => { %>
+               <li>
+                  <%= work.content %>
+
+                  <% if(work.highlight) { %>
+                     <span>(<%= work.highlight %>)</span>
+                  <% } %>
+               </li>
+            <% }) %>
          </ul>
       </div>
    </article>
@@ -70,15 +67,14 @@
             </button> -->
          </div>
          <ul class='check_list col2'>
-            <li>설거지하기, 싱크대 배수망 비우기</li>
-            <li>대표님,팀장님 쓰레기통 비우기<span>(금)</span>
-            </li>
-            <li>커피 머신, 정수기 물 받침대 설거지하기 <span>(수,금)</span>
-            </li>
-            <li>음료수 냉장고 우측 상단의 불 끄기<span>(금)</span>
-            </li>
-            <li>일반, 음식물 쓰레기, 분리수거 정리 및 분리배출<span>(금, 모두 다같이!)</span>
-            </li>
+            <% targetWorks.forEach( work => { %>
+               <li>
+                  <%= work.content %>
+                  <% if(work.highlight) { %>
+                     <span>(<%= work.highlight %>)</span>
+                  <% } %>
+               </li>
+            <% }) %>
          </ul>
       </div>
    </article>
