--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,6 @@
    margin-top:3rem;
 }
 #section02 > [class$='_wrapper'] > .colum_area {
-   position: relative;
    min-height: 18rem;
    padding: 3rem;
 }
@@ -134,20 +133,30 @@
 #section02 .duty_wrapper {
    padding-left:3rem;
 }
-#section02 .check_list > li {
-   position: relative;
+#section02 .evrynSwork_wrapper .check_list > li {
    padding-left:2.5rem;
    background:url('/assets/images/icon_check.png') left top .3rem / auto no-repeat;
+}
+#section02 .check_list > li {
+   position: relative;
    font-size:1.5rem;
    color:#333;
    margin-bottom: 1.5rem;
-   z-index:10;
 }
-#section02 .check_list > li > span {
+#section02 .check_list > li > span:not(.custom_checkbox),
+#section02 .check_list > li .custom_checkbox label > span {
    padding-left: .3rem;
    color: #FF0000;
    font-weight: 500;
 }
+
+#section02 .check_list > li .custom_checkbox label {
+   display:block;
+}
+#section02 .check_list > li .custom_checkbox input[type='checkbox']:checked + label {
+   text-decoration: line-through;
+}
+
 #section02 .check_list.col2 > li {
    display: inline-block;
    vertical-align:top;
@@ -155,26 +164,6 @@
    padding-right:1rem;
 }
 
-/* 삭제 */
-#trash {
-   position: fixed;
-   left:50%;
-   transform: translateX(-50%);
-   width: 10rem;
-   height: 10rem;
-   border-radius:100%;
-   background-color:#fff;
-}
-#trash > i {
-   position: absolute;
-   left:50%;
-   top:50%;
-   transform: translate(-50%, -50%);
-   font-size: 3rem;
-}
-.ui-droppable-active {
-   border: 1px solid #FF0000;
-}
 
 /* media query */
    /*  only desktop */
